//grpc 登陆服务配置文件

syntax = "proto3";
package login.service.v1;
option go_package = "lbk_user/pkg/service/login.service.v1";


message CaptchaRequest {
  string userMobile = 1;
}
message CaptchaResponse{
  string code = 1;
}
message RegisterRequest {
  string email = 1;
  string name = 2;
  string password =3;
  string mobile = 4;
  string captcha = 5;
}
message RegisterResponse {

}
message LoginRequest {
  string account = 1;
  string password = 2;
}
message LoginResponse{
  MemberMessage member = 1;
  TokenMessage tokenList = 3;
}
message MemberMessage {
  int64 id = 1;
  string name = 2;
  string mobile = 3;
  string account = 4;
  int64  lastLoginTime = 5;
  string email = 6;
  string code =7;
}
message TokenMessage{
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
  int64 accessTokenExp = 4;
}

service LoginService {
  rpc GetCaptcha(CaptchaRequest) returns (CaptchaResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}